update bert intent dyda_da modelé

--- a/intents_classification/bert_tiny.ipynb
+++ b/intents_classification/bert_tiny.ipynb
@@ -3,17 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "!pip install datasets matplotlib numpy pandas seaborn scikit-learn torch tqdm transformers"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import datasets\n",
@@ -28,14 +31,14 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm.auto import tqdm\n",
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer, get_scheduler"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def label_to_int(intent: str) -> int:\n",
@@ -61,26 +64,26 @@
     "        'text': entries['text'],\n",
     "        'intent': [label_to_int(entry) for entry in entries['intent']]\n",
     "    }"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def tokenize_function(examples: dict) -> dict:\n",
     "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Create a dataset dict with train as dataset.csv and validation as validation_dataset.csv\n",
@@ -91,102 +94,102 @@
     "        'validation': 'data/validation_dataset.csv'\n",
     "    }\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "for split in ['train', 'validation']:\n",
     "    dataset_dict[split] = dataset_dict[split].map(\n",
     "        lambda e: adjust_labels(e), batched=True\n",
     "    )"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\", use_fast=True)\n",
     "tokenized_datasets: datasets.DatasetDict = dataset_dict.map(tokenize_function, batched=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "tokenized_datasets = tokenized_datasets.remove_columns([\"text\"])\n",
     "tokenized_datasets = tokenized_datasets.rename_column(\"intent\", \"labels\")\n",
     "tokenized_datasets.set_format(\"torch\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "NameError",
      "evalue": "name 'DataLoader' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m train_dataloader: DataLoader \u001B[38;5;241m=\u001B[39m \u001B[43mDataLoader\u001B[49m(tokenized_datasets[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtrain\u001B[39m\u001B[38;5;124m\"\u001B[39m], shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, batch_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m8\u001B[39m)\n\u001B[1;32m      2\u001B[0m eval_dataloader: Data \u001B[38;5;241m=\u001B[39m DataLoader(tokenized_datasets[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mvalidation\u001B[39m\u001B[38;5;124m\"\u001B[39m], batch_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m8\u001B[39m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'DataLoader' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_dataloader: DataLoader \u001b[38;5;241m=\u001b[39m \u001b[43mDataLoader\u001b[49m(tokenized_datasets[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m], shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n\u001b[1;32m      2\u001b[0m eval_dataloader: Data \u001b[38;5;241m=\u001b[39m DataLoader(tokenized_datasets[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalidation\u001b[39m\u001b[38;5;124m\"\u001b[39m], batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DataLoader' is not defined"
      ]
     }
    ],
    "source": [
     "train_dataloader: DataLoader = DataLoader(tokenized_datasets[\"train\"], shuffle=True, batch_size=8)\n",
     "eval_dataloader: DataLoader = DataLoader(tokenized_datasets[\"validation\"], batch_size=8)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# This model is equal to BERT + a linear layer for classification. In our custom model we designed a FastText + a hidden layer and linear layer for classification\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\n",
     "    \"prajjwal1/bert-tiny\", num_labels=7\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "optimizer = AdamW(model.parameters(), lr=5e-5)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "num_epochs: int = 3\n",
@@ -195,14 +198,14 @@
     "    name=\"linear\", optimizer=optimizer, num_warmup_steps=0,\n",
     "    num_training_steps=num_training_steps\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "device: str = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -220,14 +223,14 @@
     "        lr_scheduler.step()\n",
     "        optimizer.zero_grad()\n",
     "        progress_bar.update(1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "metric = load_metric(\"accuracy\")\n",
@@ -248,14 +251,14 @@
     "    trues.extend(batch['labels'].cpu().detach().tolist())\n",
     "\n",
     "metric.compute()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "names = ['AddToPlaylist', 'BookRestaurant', 'GetWeather', 'PlayMusic', 'RateBook',\n",
@@ -263,10 +266,7 @@
     "print(classification_report(\n",
     "    np.array(trues).flatten(), np.array(preds).flatten(), target_names=names)\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -295,14 +295,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
